--- a/Crud Assignment/src/components/EmployeeCard/employeeCard.css
+++ b/Crud Assignment/src/components/EmployeeCard/employeeCard.css
@@ -1,58 +1,133 @@
 .table {
-    border-collapse: collapse;
-    width: 100%;
+  border-radius: 12px;
+  align-items: center;
+}
+
+.table-row{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+  padding: 1rem;
+}
+
+.icons-container {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.deleteIcon, .detailsIcon, .blockIcon{
+  padding: 0px 10px;
+}
+
+i{
+  color: #1677ff !important;
+}
+
+i :hover {
+  color: rgb(160, 9, 9) !important;
+  cursor: pointer;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+}
+
+.row {
+  padding: 0px 10px;
+}
+
+.blockIcon span {
+  display: flex;
+}
+
+@media only screen and (min-width: 561px) {
+  .table-row {
+    margin: 30px 100px;
+    text-align: left;
   }
-  
-  .table th,
-  .table td {
-    border: 1px solid #ddd;
-    padding: 8px;
+
+
+@media only screen and (min-width: 661px) {
+  .table-row {
+    margin: 30px 200px;
+    text-align: left;
   }
-
-.deleteIcon{
-  font-size: 30px;
-  color: red;
 }
 
-.deleteIcon :hover{
-  color: rgb(112, 238, 10);
-  cursor: pointer;
+@media only screen and (min-width: 861px) {
+  .table-row {
+    margin: 30px 250px;
+    text-align: left;
+  }
 }
 
-.editIcon{
-  font-size: 30px;
-  color: #5757ff;
+@media only screen and (min-width: 962px) {
+  .table-row {
+    margin: 30px 250px;
+  }
 }
 
-.editIcon :hover{
-  color: rgb(112, 238, 10);
-  cursor: pointer;
+@media only screen and (min-width: 1162px) {
+  .table-row {
+    margin: 30px 300px;
+  }
 }
 
-.blockIcon{
-  font-size: 30px;
-  color: #ffe657;
+@media only screen and (min-width: 1262px) {
+  .table-row {
+    margin: 30px 350px;
+  }
 }
 
-.blockIcon :hover{
-  color: rgb(112, 238, 10);
-  cursor: pointer;
+@media only screen and (min-width: 1362px) {
+  .table-row {
+    margin: 30px 400px;
+  }
 }
 
-.detailsIcon{
-  font-size: 30px;
-  color: green;
+@media only screen and (min-width: 1462px) {
+  .table-row {
+    margin: 30px 450px;
+  }
 }
 
-.detailsIcon :hover{
-  color: rgb(112, 238, 10);
-  cursor: pointer;
+@media only screen and (min-width: 1562px) {
+  .table-row {
+    margin: 30px 500px;
+  }
 }
 
-.iconHead{
-  color: rgb(202, 37, 25);
+@media only screen and (min-width: 1662px) {
+  .table-row {
+    margin: 30px 550px;
+  }
 }
 
-.blockIcon p{
-  font-size: 20px;
+@media only screen and (min-width: 1762px) {
+  .table-row {
+    margin: 30px 600px;
+    font-size: 18px;
+  }
+  .deleteIcon, .detailsIcon {
+    font-size: 25px;
+  }
 }
