--- a/Crud Assignment/src/components/EmployeeDetails/employeeDetails.css
+++ b/Crud Assignment/src/components/EmployeeDetails/employeeDetails.css
@@ -131,12 +131,24 @@ display: flex;
     justify-content: center;
     line-height: 2;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 12px;
+}
+.blockIcon2{
+    font-size: 10px;
+}
 }
 
 @media only screen and (min-width: 561px) {
 .table-row2 {
     margin: 30px 0px;
     text-align: left;
+    font-size: 10px;
+}
+.deleteIcon2, .editIcon2{
+    font-size: 12px;
+}
+.blockIcon2{
     font-size: 10px;
 }
 }
@@ -148,6 +160,12 @@ display: flex;
     text-align: left;
     font-size: 14px;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
 }
 
 @media only screen and (min-width: 861px) {
@@ -155,11 +173,23 @@ display: flex;
     margin: 30px 50px;
     text-align: left;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
 }
 
 @media only screen and (min-width: 962px) {
 .table-row2 {
     margin: 30px 100px;
+}
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
 }
 }
 
@@ -167,36 +197,90 @@ display: flex;
 .table-row2 {
     margin: 30px 200px;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
+
 }
 
 @media only screen and (min-width: 1262px) {
 .table-row2 {
     margin: 30px 250px;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
+.deleteIcon2, .editIcon2, .blockIcon2{
+    padding: 0px 10px;
+    }
 }
 
 @media only screen and (min-width: 1362px) {
 .table-row2 {
     margin: 30px 300px;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
+.deleteIcon2, .editIcon2, .blockIcon2{
+    padding: 0px 10px;
+    }
 }
 
 @media only screen and (min-width: 1462px) {
 .table-row2 {
     margin: 30px 350px;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
+.deleteIcon2, .editIcon2, .blockIcon2{
+    padding: 0px 10px;
+    }
 }
 
 @media only screen and (min-width: 1562px) {
 .table-row2 {
     margin: 30px 400px;
 }
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
 }
+.blockIcon2{
+    font-size: 15px;
+}
+.deleteIcon2, .editIcon2, .blockIcon2{
+    padding: 0px 10px;
+    }
+}
+
 
 @media only screen and (min-width: 1662px) {
 .table-row2 {
     margin: 30px 400px;
 }
+
+.deleteIcon2, .editIcon2{
+    font-size: 18px;
+}
+.blockIcon2{
+    font-size: 15px;
+}
+.deleteIcon2, .editIcon2, .blockIcon2{
+    padding: 0px 10px;
+    }
 }
 
 @media only screen and (min-width: 1762px) {
@@ -210,4 +294,7 @@ display: flex;
 .blockIcon2{
     font-size: 15px;
 }
+.deleteIcon2, .editIcon2, .blockIcon2{
+    padding: 0px 10px;
+    }
 }
